k8s-manifests/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd 
  namespace: argocd 
  annotations:
    cert-manager.io/cluster-issuer: zetsudev-issuer
    external-dns.alpha.kubernetes.io/hostname: argocd.zetsu.dev
    ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: contour-internal
  tls:
  - hosts:
    - argocd.zetsu.dev 
    secretName: argocd-tls
  rules:
  - host: argocd.zetsu.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server 
            port:
              name: http
